--- a/www/index.html
+++ b/www/index.html
@@ -18,39 +18,40 @@
     under the License.
 -->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <!-- link rel="stylesheet" type="text/css" href="css/index.css" / -->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-        <title>Fitness Addict</title>
-    </head>
-    <body>
-	    <nav>
-	   	    <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Push Demo</a>
-		    </div>
-		</nav>
+<head>
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, height=device-height">
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <title>Fitness Addict</title>
+</head>
+<body>
+<h1>Сайт</h1>
+<div class="app">
+    <header>
+        <h1>Fitness Addict</h1>
+    </header>
+    <main>
+        <form>
+            <h2>Login</h2>
+            <input type="text" id="input" placeholder="Type Code">
+            <button type="button" id="button">Enter</button>
+        </form>
 
-		<div class="row">
-		  <div class="col s12 m6">
-		    <div class="card darken-1">
-		      <div class="card-content black-text">
-		        <span class="card-title black-text">Registration ID</span>
-		        <p id="regId">Requested</p>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		
-		<div id="cards"></div>
+        <div class="pushcode">
+            <p>Device token: </p>
+            <p class="code"></p>
+        </div>
+    </main>
+    <footer>
+        <p>© 2016 Fitness Addict. All Rights Reserved.</p>
+    </footer>
+</div>
 
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+</body>
 </html>
