#refs 548 added weinre script

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,6 @@
     <title>Fitness Addict</title>
 </head>
 <body>
-<h1>Сайт</h1>
 <div class="app">
     <header>
         <h1>Fitness Addict</h1>
@@ -50,8 +49,8 @@
     </footer>
 </div>
 
-
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="http://10.0.100.78:3001/target/target-script-min.js#anonymous"></script>
 </body>
 </html>
