--- a/www/index.html
+++ b/www/index.html
@@ -45,5 +45,8 @@
         <ion-nav-view></ion-nav-view>
     </div>
 </div>
+
+  <script src="http://10.0.100.78:8080/target/target-script-min.js#anonymous"></script>
+
   </body>
 </html>
