--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-  <script src="http://10.0.100.78:8080/target/target-script-min.js#anonymous"></script>
+  <!--<script src="http://10.0.100.78:8080/target/target-script-min.js#anonymous"></script>-->
 
   </body>
 </html>
