--- a/www/index.html
+++ b/www/index.html
@@ -1,53 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
+  <link href="css/app.min.css" rel="stylesheet">
+</head>
 
-    <!--<link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/angular-translate/angular-translate.min.js"></script>
+<body ng-app="app">
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+<ion-pane>
+  <ion-header-bar class="bar-stable">
+    <h1 class="title">Ionic Blank Starter</h1>
+  </ion-header-bar>
+  <ion-content>
+  </ion-content>
+</ion-pane>
+</body>
 
-    <link href="css/ionic.app.css" rel="stylesheet">
-
-    <style type="text/css">
-      .platform-ios .manual-ios-statusbar-padding{
-        padding-top:20px;
-      }
-      .manual-remove-top-padding{
-        padding-top:0px; 
-      }
-      .manual-remove-top-padding .scroll{
-        padding-top:0px !important;
-      }
-    </style>
-
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/routes.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-
-    <!-- Only required for Tab projects w/ pages in multiple tabs 
-    <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
-    -->
-
-  </head>
-  <body ng-app="app" animation="slide-left-right-ios7">
-  <div>
-    <div>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
-        </ion-nav-bar>
-        <ion-nav-view></ion-nav-view>
-    </div>
-</div>
-
-  <!--<script src="http://10.0.100.78:8080/target/target-script-min.js#anonymous"></script>-->
-
-  </body>
+<!-- cordova script (this will be a 404 during development) -->
+<script src="cordova.js"></script>
+<!-- your app's js -->
+<script src="js/app.js"></script>
 </html>
