--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
-  <link href="css/app.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+    <link href="css/app.min.css" rel="stylesheet">
 </head>
 
-<body ng-app="app">
+<body ng-app="app" animation="slide-left-right-ios7">
+<div>
+    <div>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
+        </ion-nav-bar>
+        <ion-nav-view></ion-nav-view>
+    </div>
+</div>
 
-<ion-pane>
-  <ion-header-bar class="bar-stable">
-    <h1 class="title">Ionic Blank Starter</h1>
-  </ion-header-bar>
-  <ion-content>
-  </ion-content>
-</ion-pane>
-</body>
-
-<!-- cordova script (this will be a 404 during development) -->
 <script src="cordova.js"></script>
-<!-- your app's js -->
 <script src="js/app.js"></script>
+</body>
 </html>
