--- a/app/shared/tabsController/tabsController.html
+++ b/app/shared/tabsController/tabsController.html
@@ -1,16 +1,16 @@
 <ion-view title="Tabs Controller" id="page1">
     <ion-tabs class="tabs-stable tabs-icon-top">
         <ion-tab title="Services" icon="ion-ios-body" href="#/main/services">
-            <ion-nav-view name="tab4"></ion-nav-view>
+            <ion-nav-view name="services"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Stream" icon="ion-social-rss" href="#/main/stream">
-            <ion-nav-view name="tab1"></ion-nav-view>
+            <ion-nav-view name="stream"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Appointments" icon="ion-calendar" href="#/main/my-appointments">
-            <ion-nav-view name="tab2"></ion-nav-view>
+        <ion-tab title="Events" icon="ion-calendar" href="#/main/my-events">
+            <ion-nav-view name="events"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Account" icon="ion-ios-contact" href="#/main/account">
-            <ion-nav-view name="tab3"></ion-nav-view>
+            <ion-nav-view name="account"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
 </ion-view>
